// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UIP > basic 1`] = `
<p
  class="ui-p "
>
  <strong>
    Test
  </strong>
</p>
`;

exports[`svelte/UIP > with id 1`] = `
<p
  class="ui-p "
  id="test"
>
  <strong>
    Test
  </strong>
</p>
`;

exports[`svelte/UIP > with id 2`] = `
<p
  class="ui-p "
>
  <strong>
    Test
  </strong>
</p>
`;

exports[`svelte/UIP > with itemProp 1`] = `
<p
  class="ui-p "
  itemprop="description"
>
  <strong>
    Test
  </strong>
</p>
`;

exports[`svelte/UIP > with modifiers 1`] = `
<p
  class="ui-p large"
>
  <strong>
    Test
  </strong>
</p>
`;

exports[`svelte/UIP > with modifiers 2`] = `
<p
  class="ui-p "
>
  <strong>
    Test
  </strong>
</p>
`;
